--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=BookStoreDb;PersistSecurityInfo=True;UserID=sa;Password=Th@nd@ph1730611;Pooling=False;Encrypt=True;TrustServerCertificate=False"
+  },
   "SeriLog": {
     "MinimumLevele": {
       "Default": "information",
